🔧 - Fix Junit config in build.gradle